testsuite/tests/th/TH_implicitParamsErr1.stderr

TH_implicitParamsErr1.hs:5:2: error:
    Implicit parameter binding only allowed in let or where
    When splicing a TH declaration: ?x = 1
